[project]
name = "adv-mla-lab-3"
version = "0.1.0"
description = ""
authors = [
    {name = "Amanda1005",email = "a19881005a@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "scikit-learn (==1.5.1)",
    "pandas (==2.2.2)",
    "jupyterlab (==4.2.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
